<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/colorPrimary"/>
    <item
        android:id="@+id/login_signup"
        android:icon="@drawable/ic_signup"
        android:title="@string/login_signup"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favourates"
        app:cnb_iconColor="@color/colorPrimary" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"
        app:cnb_iconColor="@color/colorPrimary" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_iconColor="@color/colorPrimary" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/about_us"
        app:cnb_iconColor="@color/colorPrimary" />

    <item
        android:id="@+id/rate"
        android:icon="@drawable/ic_rate"
        android:title="@string/rate_app"
        app:cnb_iconColor="@color/colorPrimary" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_app"
        app:cnb_iconColor="@color/colorPrimary" />

    <item
        android:id="@+id/privacy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy_policy"
        app:cnb_iconColor="@color/colorPrimary" />


</menu>