<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:cnb_iconColor="@color/colorPrimary"/>

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favourates"
        app:cnb_iconColor="@color/colorPrimary" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_iconColor="@color/colorPrimary" />
</menu>